change to staticlib

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@ authors = ["Jun Kimura <junkxdev@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-hmc = { git = "https://github.com/bluele/hypermint", tag = "v0.3.0" }
+hmc = { git = "https://github.com/bluele/hypermint", branch = "develop" }
 
 [dev-dependencies]
 hmemu = { git = "https://github.com/bluele/hmemu", branch = "develop" }
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["staticlib", "lib"]
