disable mangling at emulation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Jun Kimura <junkxdev@gmail.com>"]
 edition = "2018"
 
+[features]
+emulation = []
+
 [dependencies]
 hmc = { git = "https://github.com/bluele/hypermint", branch = "develop" }
 
