--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2018"
 emulation = []
 
 [dependencies]
-hmc = { git = "https://github.com/bluele/hypermint", tag = "v0.4.1" }
+hmcdk = { git = "https://github.com/bluele/hypermint", tag = "v0.4.3" }
 
 [dev-dependencies]
-hmemu = { git = "https://github.com/bluele/hmemu", tag = "v0.0.1" }
+hmemu = { git = "https://github.com/bluele/hmemu", tag = "v0.0.3" }
 
 [lib]
 crate-type = ["staticlib", "lib"]
